--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,6 @@
     left:0;
     width:100%;
     height:100%;
-   
     z-index: 1;
 
 }
@@ -235,6 +234,8 @@ a:hover:before {
     position: absolute;
     margin-top: -50px;
     padding: 2px;
+    background-blend-mode: soft-light;
+    transition: all 0.5s;
 }
 .small-image-text {
     background-color: var(--second);
@@ -256,23 +257,14 @@ a:hover:before {
 .bigimage {width: var(--big-w-1);
     border: 4px solid nav(--second);
     color: #000;
-    -webkit-transition: opacity 0.5s ease-in-out;
-    -moz-transition: opacity 0.5s ease-in-out;
-    -ms-transition: opacity 0.5s ease-in-out;
-    -o-transition: opacity 0.5s ease-in-out;
-    transition: opacity 0.5s ease-in-out;
-    opacity: 0.8;
+    
 }
 
 .smallimage {width: var(--small-w-1);
     border: 4px solid nav(--second);
     color: #000;
-    -webkit-transition: opacity 0.5s ease-in-out;
-    -moz-transition: opacity 0.5s ease-in-out;
-    -ms-transition: opacity 0.5s ease-in-out;
-    -o-transition: opacity 0.5s ease-in-out;
-    transition: opacity 0.5s ease-in-out;
-    opacity: 0.8;
+    height: 400px;
+    
 }
 
 .footer {
